--- a/mods/ts/rules/shared-vehicles.yaml
+++ b/mods/ts/rules/shared-vehicles.yaml
@@ -5,6 +5,7 @@ MCV:
 	Inherits@bounty: ^GlobalBounty
 	Buildable:
 		Queue: Vehicle
+		BuildAtProductionType: Factory
 		BuildPaletteOrder: 160
 		Prerequisites: ~factory, tech, ~techlevel.medium
 		Description: Deploys into another Construction Yard.\n  Unarmed
@@ -72,6 +73,7 @@ HARV:
 		Name: Harvester
 	Buildable:
 		Queue: Vehicle
+		BuildAtProductionType: Factory
 		BuildPaletteOrder: 10
 		Prerequisites: ~factory, proc, ~techlevel.low
 		Description: Collects Tiberium for processing.\n  Unarmed
@@ -161,6 +163,7 @@ LPST:
 	-AppearsOnRadar:
 	Buildable:
 		Queue: Vehicle
+		BuildAtProductionType: Factory
 		BuildPaletteOrder: 90
 		Prerequisites: ~factory, radar, ~techlevel.medium
 		Description: Can detect cloaked and subterranean\nunits when deployed.\n  Unarmed
