--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -369,12 +369,12 @@ World:
 	CreateMapPlayers:
 	StartingUnits@MCV:
 		Class: none
-		ClassName: mcv-only
+		ClassName: options-starting-units.mcv-only
 		Factions: gdi, nod
 		BaseActor: mcv
 	StartingUnits@light.gdi:
 		Class: light
-		ClassName: light
+		ClassName: options-starting-units.light
 		Factions: gdi
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,smech
@@ -382,7 +382,7 @@ World:
 		OuterSupportRadius: 5
 	StartingUnits@light.nod:
 		Class: light
-		ClassName: light
+		ClassName: options-starting-units.light
 		Factions: nod
 		BaseActor: mcv
 		SupportActors: e1,e1,e1,bggy
@@ -390,7 +390,7 @@ World:
 		OuterSupportRadius: 5
 	StartingUnits@med.gdi:
 		Class: medium
-		ClassName: medium
+		ClassName: options-starting-units.medium
 		Factions: gdi
 		BaseActor: mcv
 		SupportActors: e1,e1,e2,e2,jumpjet,smech
@@ -398,7 +398,7 @@ World:
 		OuterSupportRadius: 5
 	StartingUnits@med.nod:
 		Class: medium
-		ClassName: medium
+		ClassName: options-starting-units.medium
 		Factions: nod
 		BaseActor: mcv
 		SupportActors: e1,e1,e3,e3,cyborg,bggy
@@ -406,7 +406,7 @@ World:
 		OuterSupportRadius: 5
 	StartingUnits@heavy.gdi:
 		Class: heavy
-		ClassName: heavy
+		ClassName: options-starting-units.heavy
 		Factions: gdi
 		BaseActor: mcv
 		SupportActors: e1,e1,e2,e2,jumpjet,smech,smech,mmch
@@ -414,7 +414,7 @@ World:
 		OuterSupportRadius: 5
 	StartingUnits@heavy.nod:
 		Class: heavy
-		ClassName: heavy
+		ClassName: options-starting-units.heavy
 		Factions: nod
 		BaseActor: mcv
 		SupportActors: e1,e1,e3,e3,cyborg,bggy,bike,ttnk
