--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -94,6 +94,7 @@ RUTEST:
 		# CanCrushActor: false
 		PauseOnCondition: being-captured || carried || Jumping
 		# CanMoveBackward: true
+		MovementMode: Universal
 	# AutoCrusher:
 	# 	TargetRelationships: Enemy
 	# 	MinimumScanTimeInterval: 2
