--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -8,6 +8,10 @@
 	RenderDebugState:
 	ActorControler:
 		TargetCursor: nuke
+	InaccuracyMultiplier:
+		Modifier: 120
+		RequiresCondition: !under-control
+
 
 ^SpriteActor:
 	BodyOrientation:
